@@ -1,0 +1,4 @@
+#ifndef BATTLE_MANAGER_H
+#define BATTLE_MANAGER_H
+
+#endif
