@@ -1,0 +1,4 @@
+#ifndef BATTLE_VIEW_H
+#define BATTLE_VIEW_H
+
+#endif
