@@ -1,0 +1,7 @@
+
+#ifndef STRING_HELPERS_H
+#define STRING_HELPERS_H
+
+void rightPad(char* str, int width);
+
+#endif
