@@ -93,5 +93,9 @@
     - Implemented a simple array list for holding entities
     - Handled character movement
 * Day 2 (2024-03-20)
+    Afternoon:
     - Completed movement control
     - Vastly optimized ncurses updates, can now refresh at 21kHz without flickering (3kHz on pyrite)
+    Evening:
+    - Implemented context switching
+    - Implemented trainer list
